--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>Hello!<br>
                                 Im Connor
                             </h1>
-							<p class="major">And if you're reading this you're gay!</p>
+							<p class="major">Im a up and coming Software Engineer and this is my resume!</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
