education section addded

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
+				<!-- Start Banner -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hello!<br>
@@ -32,7 +32,18 @@
 							<img src="images/banner.jpg" alt="" />
 						</div>
 					</section>
-
+					<!-- Education -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Education</h2>
+							<p>I have a bachellors in Computer Science awarded by the University of North Florida</p>
+							<ul class="actions stacked">
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/spotlight01.jpg" alt="" />
+						</div>
+					</section>
 				
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
