--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                                 Im Connor
                             </h1>
 							<p class="major">Im a up and coming Software Engineer and this is my resume!</p>
-							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+							<ul class="actions">
+								<li><a href="#first" class="button big wide smooth-scroll-middle">About Me</a></li>
+								<li><a href="/pages/portfolio.html" class="button big wide smooth-scroll-middle">Portfoilo</a></li>
 							</ul>
 						</div>
 						<div class="image">
