--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<p class="major">Im a up and coming Software Engineer and this is my resume!</p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">About Me</a></li>
-								<li><a href="/pages/portfolio.html" class="button big wide smooth-scroll-middle">Portfoilo</a></li>
+								<li><a href="./pages/Portfolio.html" class="button big wide smooth-scroll-middle">Portfoilo</a></li>
 							</ul>
 						</div>
 						<div class="image">
