--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -36,7 +36,7 @@
         <p>
             This project is a hardware-software system that converts spoken audio into braille output. A user speaks into the system, and the audio is transcribed using a speech recognition API (AssemblyAI). The transcribed text is then converted into braille representations and physically output from a RassberyPI. The Pi sends the signals to GPIO pins that each control an elctro-Magnet Solonoid that will extend and represent a braille dot.
         </p>
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/suyXls2QUo0"></iframe>
     </section>
 </main>
 
