--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
 					</section>
 				
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
+					<footer class="wrapper style1 content-align-left">
+						<!--Add Contact info-->
 						<div class="inner">
-                            <p>My Socials</p>
+                            <p>My Socials/Contact:</p>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/connor-r-murray/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span>connor-r-murray</a></li><br>
+								<li><a href="mailto:connormurray215@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span> connormurray215@gmail.com</a></li>
 							</ul>
 						</div>
 					</footer>
