--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -18,7 +18,8 @@
 
 <main>
     <section id="section-1">
-        <h1>Portfoilio</h1>
+        <h1 class="portHeader">Portfoilio</h1>
+        <a class="gitHeader" target="_blank" href="https://github.com/truckin215">github.com/truckin215</a>
         <p>
             This page will feature all the projects I have been apart of and worked on!
         </p>
@@ -28,15 +29,24 @@
         </p>
     </section>
         <section id="section-2">
-        <h1>Speech-to-Braille</h1>
+        <h1 class="portHeader">Speech-to-Braille</h1>
+        <a class="gitHeader" target="_blank" href="https://github.com/truckin215/SpeechToBraille">github.com/truckin215/SpeechToBraille</a>
         <p>
-            Speech-to-braille was my senior cap stone project and dives into:
-            <br><strong>AI, Embeddded Systems & Hardware Integration, Multithreading & Concurrency, Networking, and Natural Language Processing</strong>
+            Speech-to-braille was my senior capstone project and dives into:
+            <br><strong>AI, Embedded Systems & Hardware Integration, Multithreading & Concurrency, Networking, and Natural Language Processing</strong>
         </p>
         <p>
-            This project is a hardware-software system that converts spoken audio into braille output. A user speaks into the system, and the audio is transcribed using a speech recognition API (AssemblyAI). The transcribed text is then converted into braille representations and physically output from a RassberyPI. The Pi sends the signals to GPIO pins that each control an elctro-Magnet Solonoid that will extend and represent a braille dot.
+            This project is a hardware-software system that converts spoken audio into braille output. A user speaks into the system, and the audio is transcribed using a speech recognition API (AssemblyAI). The transcribed text is then converted into braille representations and physically output from a RassberyPI. The Pi sends the signals to GPIO pins that each control an elctromagnetic Solonoid that will extend and represent a braille dot.
         </p>
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/suyXls2QUo0"></iframe>
+        <br>
+        <p>
+            I even presented the project at the University of North Florida's technology symposia. Audience members were able to speek into the microphone and watch as their voice turned into braille.
+            
+            <br>we were voted by audience as one of the top projects.
+        </p>
+        </iframe><img width="420" height="315" src="../images/board.jpg" alt="img broke">
+        <br>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/suyXls2QUo0">
     </section>
 </main>
 
