--- a/pages/imgBank.html
+++ b/pages/imgBank.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     </iframe><img width="420" height="315" src="../images/JeoParty/man.png" alt="img broke">
-    </iframe><img width="420" height="315" src="../images/board.jpg" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/jes.png" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/jeesus.png" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/laugh.jpg" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/All-you-need-to-know-about-keeping-a-laughing-Buddha-statue-at-home-shutterstock_1816713842.jpg" alt="img broke">
 </body>
 </html>
