--- a/pages/imgBank.html
+++ b/pages/imgBank.html
@@ -10,6 +10,8 @@
     </iframe><img width="420" height="315" src="../images/JeoParty/jes.png" alt="img broke">
     </iframe><img width="420" height="315" src="../images/JeoParty/jeesus.png" alt="img broke">
     </iframe><img width="420" height="315" src="../images/JeoParty/laugh.jpg" alt="img broke">
-    </iframe><img width="420" height="315" src="../images/JeoParty/All-you-need-to-know-about-keeping-a-laughing-Buddha-statue-at-home-shutterstock_1816713842.jpg" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/bud.png" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/bois.jpg" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/inner.png" alt="img broke">
 </body>
 </html>
