--- a/pages/imgBank.html
+++ b/pages/imgBank.html
@@ -13,5 +13,7 @@
     </iframe><img width="420" height="315" src="../images/JeoParty/bud.png" alt="img broke">
     </iframe><img width="420" height="315" src="../images/JeoParty/bois.jpg" alt="img broke">
     </iframe><img width="420" height="315" src="../images/JeoParty/inner.png" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/pop.png" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/5-things-you-didnt-know-about-pope.webp" alt="img broke">
 </body>
 </html>
