--- a/pages/imgBank.html
+++ b/pages/imgBank.html
@@ -15,5 +15,6 @@
     </iframe><img width="420" height="315" src="../images/JeoParty/inner.png" alt="img broke">
     </iframe><img width="420" height="315" src="../images/JeoParty/pop.png" alt="img broke">
     </iframe><img width="420" height="315" src="../images/JeoParty/mp.png" alt="img broke">
+    </iframe><img width="420" height="315" src="../images/JeoParty/hqs.png" alt="img broke">
 </body>
 </html>
